--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <div class="result" id="result">Let's play!</div> <!-- Display the game result -->
         <button id="play-round">Play Round</button> <!-- Button to play a round -->
     </div>
-    <script src="new_RPS_p3.js"></script> <!-- Link to the external JavaScript file -->
+    <script src="RPSp3.js"></script> <!-- Link to the external JavaScript file -->
 </body>
 </html>
